Thu Jun  2 10:24:48 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c: Raise ArgumentError when invalid string is detected in
	  case mapping methods.

	* enc/unicode.c: Check for invalid string and signal with negative
	  length value.

	* test/ruby/enc/test_case_mapping.rb: Add tests for above.

	* test/ruby/test_m17n_comb.rb: Add a message to clarify test failure.

Wed Jun  1 21:41:05 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: Check existence of ASN1_TIME_adj(). The old
	  ASN1_TIME_set() is not Year 2038 ready on sizeof(time_t) == 4
	  environment. This function was added in OpenSSL 1.0.0.
	  [ruby-core:45552] [Bug #6571]

	* ext/openssl/ossl_asn1.c (ossl_time_split): Added. Split the argument
	  (Time) into the number of days elapsed since the epoch and the
	  remainder seconds to conform to ASN1_TIME_adj().
	  (obj_to_asn1utime, obj_to_asn1gtime): Use ossl_time_split() and
	  ASN1_*TIME_adj().

	* ext/openssl/ossl_asn1.h: Add the function prototype for
	  ossl_time_split().

	* ext/openssl/ossl_x509.[ch]: Add ossl_x509_time_adjust(). Similarly to
	  obj_to_asn1*time(), use X509_time_adj_ex() instead of X509_time_adj().

	* ext/openssl/ossl_x509cert.c, ext/openssl/ossl_x509crl.c,
	  ext/openssl/ossl_x509revoked.c: Use ossl_x509_time_adjust().

Wed Jun  1 15:58:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: revert r55237.  replace crypt, not crypt_r, and
	  check if crypt is broken more.

	* missing/crypt.c: move crypt_r.c

	* string.c (rb_str_crypt): use crypt_r if provided by the system.

Wed Jun  1 14:07:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/crypt_r.c (a64toi): initialize statically and fix out of
	  bounds access when salt is not 7bit clean.

Wed Jun  1 11:34:59 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (MISSING): fixed build error introduced at r55237.

Wed Jun  1 09:48:06 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
